# cdda_maped

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  bug_report.yml  feature_request.yaml  feature_request.yml
.github/workflows/: ci.yml  integration-tests.yml  publish-testpypi.yml
cdda_maped/: __init__.py  __main__.py
cdda_maped/game_data/: inheritance.py  managers.py
cdda_maped/gui/: __init__.py  actions.py  json_display.py  layout.py  main_window.py  menu.py  object_browser.py
cdda_maped/gui/dialogs/: base_dialog.py  mod_selection_dialog.py  multi_z_level_dialog.py  type_slot_mapping_dialog.py
cdda_maped/gui/map_view/: __init__.py  animation_manager.py  events.py  grid_renderer.py  map_view.py  scene_manager.py
cdda_maped/gui/object_explorer_window/: actions.py  layout.py  menu.py  window.py
cdda_maped/gui/selectors/: icon_selector.py  ts_iso_selector.py  ts_ortho_selector.py  weather_selector.py
cdda_maped/maps/: demo_map_metadata.py  demo_map_registry.py  map_manager.py  models.py
cdda_maped/resources/: __init__.py  style_manager.py
cdda_maped/resources/demo_maps/: beach.json
cdda_maped/settings/: README.md  __init__.py  core.py  mods.py  multi_z_level.py  type_slot_mapping.py  types.py  ui.py
cdda_maped/tilesets/: __init__.py  managers.py  models.py  service.py
cdda_maped/utils/: __init__.py  global_key_filter.py  gui_log_manager.py  log_window.py  logging_config.py
docs/how_to_use/: index.md
docs/how_to_use/object_explorer/: oe_overview.md
src/cdda_maped/: __init__.py  __main__.py
tests/: __init__.py  conftest.py  test_basic.py
tests/integration/: test_cdda_loading.py
(+61 files in other folders)
